Fixes to responsive design on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -40,3 +40,8 @@ figure {
     margin-left: 0;
     margin-right: 0;
 }
+
+img {
+    display: block;
+    width: 100%;
+}
